src/app/components/navigation/navigation.module.css
.container {
  position: sticky;
  --brand-name-length: 224px;
  padding: var(--spacing-s) 0px;

  min-height: 64px;
}

.navigation li {
  list-style: none;
  text-align: center;

  /* font-family: 'Montserrat'; */
  font-size: 1rem;
}

.navigation li a {
  color: var(--primary-50);
  text-decoration: none;
}

.navigation {
  height: auto;

  display: grid;
  grid-template-columns: repeat(3, 1fr) var(--brand-name-length) repeat(3, 1fr);
}

.brand {
  color: var(--primary-50);
  font-size: 1.5rem;
  display: inline-block;
  font-family: 'Lora';

  width: auto;

  position: absolute;
  left: calc(50% - (var(--brand-name-length) / 2));
  bottom: calc(var(--spacing-s) - 2px);
}

.navigation > li:nth-child(1) {
  grid-column-start: 2;
}

.navigation > li:nth-child(3) {
  grid-column: 5/6;
}

.navigation,
.navigation li {
  align-content: center;
}

@media screen and (max-width: 1000px) {
  .navigation {
    grid-template-columns: 1fr auto 1fr;
    translate: -100%;
    opacity: 0%;
  }

  .container {
    position: sticky;
    top: 0;
  }

  .navigation li {
    display: none;
  }

  .navigation > li:nth-child(1) {
    grid-column-start: 1;
  }

  .container:has(input:checked) {
    .navigation {
      transition: translate var(--nav-animation-timing),
        opacity var(--nav-animation-timing);
      translate: 0%;
      opacity: 1;
      padding: 0.5rem 1rem;
      padding-top: 4rem;
      background-color: var(--primary-900);
      color: var(--primary-50);
      width: 12rem;
      z-index: 3;

      position: fixed;
      right: 0px;
      top: 0px;
      bottom: 0px;

      display: flex;
      flex-direction: column;
    }

    .navigation li {
      display: block;
      text-align: left;

      font-size: 1.5rem;

      margin-bottom: 1rem;
    }
  }
}

@media screen and (max-width: 580px) {
  .navigation > li:nth-child(5) {
    display: none;
  }

  .navigation {
    width: 75%;
  }
}

